syntax = "proto3";

option java_package = "com.example.greetingservice";
option java_outer_classname = "HelloProto";
option java_multiple_files = true;

package hello;

service HelloService {
  rpc SayHello (HelloRequest) returns (HelloResponse);
}

message HelloRequest {
  string name = 1;
}
message HelloResponse {
  string message = 1;
}